--- a/Project 1  Part 3/about.html
+++ b/Project 1  Part 3/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - CV Solutions</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the external CSS file -->
 </head>
 <body>
 
@@ -24,6 +24,9 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -32,15 +35,51 @@
 </header>
 
 <main class="container mt-4">
-    <section id="about">
+    <section id="about" class="text-center">
         <h2>About Us</h2>
-        <p>We are experts in computer vision and image processing technologies, delivering cutting-edge solutions to our clients.</p>
-        <img src="your-image-url.jpg" alt="About Us" class="img-fluid float-right ml-3" style="width: 40%;">
+        <p>We are experts in computer vision and image processing technologies, delivering cutting-edge solutions to our clients across various industries.</p>
+        <img src="Images/about.jpeg" alt="About Us" class="img-fluid mb-4" style="width: 40%;">
+    </section>
+
+    <section id="mission-vision" class="mt-5">
+        <h2>Our Mission & Vision</h2>
+        <p><strong>Mission:</strong> To empower businesses through innovative computer vision solutions that enhance efficiency and decision-making.</p>
+        <p><strong>Vision:</strong> To be a global leader in computer vision technology, setting standards for quality and innovation.</p>
+    </section>
+
+    <section id="team" class="mt-5">
+        <h2>Meet Our Team</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <h3>Jane Doe</h3>
+                <p>CEO & Founder</p>
+                <p>With over 10 years in AI and computer vision, Jane leads our innovative projects.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>John Smith</h3>
+                <p>CTO</p>
+                <p>John oversees the technical development and implementation of our solutions.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Emily Johnson</h3>
+                <p>Head of Research</p>
+                <p>Emily drives our research initiatives, focusing on emerging technologies in computer vision.</p>
+            </div>
+        </div>
     </section>
 </main>
 
 <footer class="text-center mt-4">
     <p>&copy; 2024 CV Solutions. All rights reserved.</p>
+    <div>
+        <a href="privacy.html">Privacy Policy</a> | 
+        <a href="terms.html">Terms of Service</a>
+    </div>
+    <div>
+        <a href="https://www.facebook.com" target="_blank">Facebook</a> | 
+        <a href="https://www.twitter.com" target="_blank">Twitter</a> | 
+        <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+    </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
