--- a/Project 1  Part 3/index.html
+++ b/Project 1  Part 3/index.html
@@ -24,6 +24,9 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -34,16 +37,61 @@
 <main class="container mt-4 text-center">
     <section id="hero" class="hero-section">
         <h1>Welcome to CV Solutions</h1>
-        <p>Your partner in computer vision technology.</p>
-        <img src="img1.jpeg" alt="Computer Vision" class="img-fluid" height="400px" width="400px">
+        <p>Your partner in cutting-edge computer vision technology.</p>
+        <img src="/Images/img1.jpeg" alt="Visual representation of computer vision technology" class="img-fluid" height="400" width="400">
         <div>
             <a href="about.html" class="btn btn-primary mt-3">Learn More</a>
         </div>
     </section>
+
+    <section id="services" class="mt-5">
+        <h2>Our Services</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <h3>Object Detection</h3>
+                <p>Identify and classify objects in images and videos using advanced algorithms.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Image Recognition</h3>
+                <p>Analyze and recognize images for various applications, enhancing automation.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Video Analytics</h3>
+                <p>Extract meaningful insights from video data for security and monitoring.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="use-cases" class="mt-5">
+        <h2>Use Cases</h2>
+        <p>Our technology is utilized in various industries:</p>
+        <ul class="list-group">
+            <li class="list-group-item">Healthcare: Improved diagnostics through image analysis.</li>
+            <li class="list-group-item">Security: Enhanced surveillance with real-time object detection.</li>
+            <li class="list-group-item">Retail: Customer insights through behavior tracking.</li>
+        </ul>
+    </section>
+
+    <section id="testimonials" class="mt-5">
+        <h2>What Our Clients Say</h2>
+        <blockquote class="blockquote">
+            <p class="mb-0">"CV Solutions has transformed our operational efficiency!"</p>
+            <footer class="blockquote-footer">John Doe, <cite title="Source Title">CEO, Tech Innovations</cite></footer>
+        </blockquote>
+    </section>
 </main>
 
 <footer class="text-center mt-4">
-    <p style="display: flex; flex-direction: bottom;">&copy; 2024 CV Solutions. All rights reserved.</p>
+    <p>&copy; 2024 CV Solutions. All rights reserved.</p>
+    <div>
+        <a href="privacy.html">Privacy Policy</a> | 
+        <a href="terms.html">Terms of Service</a>
+    </div>
+    <div>
+        <a href="https://www.facebook.com" target="_blank">Facebook</a> | 
+        <a href="https://www.twitter.com" target="_blank">Twitter</a> | 
+        <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+    </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
